Fixes: NB#266666 - Information banner not correctly aligned to screen

--- a/base/meegotouch/libmeegotouchviews/style/mbannerstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mbannerstyle.css
@@ -251,10 +251,12 @@ MBannerStyle #SystemBanner.Portrait {
 
 MBannerStyle #InformationBanner {
     icon-size: 0 0;
-    margin-right: 1mm;
-    margin-top:1mm;
-    margin-left:1mm;
-    margin-bottom:1mm;
+
+    margin-top:$MARGIN_LARGE;
+    margin-bottom:$MARGIN_LARGE;
+    margin-right: $MARGIN_LARGE;
+    margin-left:$MARGIN_LARGE;
+
     background-image: "meegotouch-notification-information-background" 10px 10px 10px 10px;
 }
 
